@@ -14,13 +14,13 @@ Uint32 pygame_list_to_color(TP,tp_obj clr,SDL_Surface *s) {
 #define PYGAME_TYPE_SURF 0x1001
 
 void pygame_surf_free(TP,tp_obj d) {
-    if (d.data.meta->type != PYGAME_TYPE_SURF) { tp_raise(,"%s","not a surface"); }
+    if (d.data.magic != PYGAME_TYPE_SURF) { tp_raise(,"%s","not a surface"); }
     SDL_FreeSurface(d.data.val);
 }
 
 SDL_Surface *pygame_obj_to_surf(TP,tp_obj self) {
     tp_obj d = tp_get(tp,self,tp_string("__surf"));
-    if (d.data.meta->type != PYGAME_TYPE_SURF) { tp_raise(0,"%s","not a surface"); }
+    if (d.data.magic != PYGAME_TYPE_SURF) { tp_raise(0,"%s","not a surface"); }
     return d.data.val;
 }
 
@@ -43,9 +43,8 @@ tp_obj pygame_surface_set_at(TP) {
 tp_obj pygame_surf_to_obj(TP,SDL_Surface *s) {
     tp_obj self = tp_dict(tp);
     
-    tp_obj d = tp_data(tp,s);
-    d.data.meta->type = PYGAME_TYPE_SURF;
-    d.data.meta->free = pygame_surf_free;
+    tp_obj d = tp_data(tp,PYGAME_TYPE_SURF,s);
+    d.data.info->free = pygame_surf_free;
 
     tp_set(tp,self,tp_string("__surf"),d);
     tp_set(tp,self,tp_string("set_at"),tp_method(tp,self,pygame_surface_set_at));
