@@ -20,3 +20,5 @@
 * applied patch by allefant to keep blob->tinypy.h from having warnings
 * added math module from Rockins Chen
 * fixed precedent of **
+* removed unused tp_data meta methods
+* made tp_data API "safer" by requiring the magic type
